# DeepFake-Detection

./: .gitignore  DEEPFAKE_GENERATION_RESEARCH.md  IMPLEMENTATION_GUIDE.md  LITERATURE_REVIEW.md  PLAN.md  PROJECT_DESCRIPTION.md  README.md  SESSION_PROGRESS.md  ablation_study.py  deepfake_generator.py  enroll_identities.py  evaluate.py  inference.py  preprocess_videos.py  pyproject.toml  requirements.txt  run_gradcam.py  run_pipeline.py  test.py
.github/instructions/: rules.instructions.md
.gsd/: ARCHITECTURE.md  STACK.md  STATE.md
data/deepfake_videos/: deepfake_manifest.csv
models/: __init__.py  full_pipeline.py  gait_encoder.py  identity_verifier.py  temporal_model.py
outputs/ablation/: ablation_results.json  cnn-only_best.pth  full_hybrid_best.pth  lstm-only_best.pth  transformer-only_best.pth
outputs/gradcam/aggregate/: gradcam_results.json
outputs/paper_figures/: all_tables.txt
scripts/: run_pipeline.py
scripts/enrollment/: enroll_identities.py
scripts/evaluation/: ablation_study.py  evaluate.py  generate_paper_figures.py  run_gradcam.py  verify_gait_preservation.py  visualize_keypoints.py
scripts/inference/: inference.py
scripts/preprocessing/: augment_videos.py  extract_faces.py  preprocess_videos.py
scripts/training/: train.py
utils/: __init__.py  data_loader.py  gradcam.py  logger.py  pose_extraction.py  pose_extraction_gpu.py  visualization.py
