[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gait-deepfake-detection"
version = "1.0.0"
description = "Gait-based deepfake detection using CNN+BiLSTM+Transformer hybrid architecture"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
include = ["models*", "utils*"]
